[modify] 依存関係を修正

--- a/fourth_robot_slam/package.xml
+++ b/fourth_robot_slam/package.xml
@@ -11,4 +11,10 @@
   <author email="groadpg@gmail.com">Ryodo Tanaka</author>
   
   <buildtool_depend>catkin</buildtool_depend>
+  <run_depend>rosbag</run_depend>
+  <run_depend>rviz</run_depend>
+  <run_depend>robot_state_publisher</run_depend>
+  <run_depend>gmaapping</run_depend>
+  <run_depend>cartographer_ros</run_depend>
+
 </package>
